fixup! New layout

--- a/src/Main.scss
+++ b/src/Main.scss
@@ -109,6 +109,7 @@ body {
         float: left;
       }
       .secondary {
+        position: absolute;
         opacity: 0;
         visibility: hidden;
       }
