--- a/src/timeline.scss
+++ b/src/timeline.scss
@@ -5,32 +5,8 @@ $radius: 5px;
 $spacing: 50px;
 
 .timeline {
-  justify-self: flex-end;
-
-  background: $light;
-  color: fade(white, 80%);
+  color: fade($black, 80%);
   letter-spacing: 0.5px;
-  line-height: 1.4em;
-  font-size: 1.03em;
-  list-style: none;
-  text-align: left;
-  font-weight: 100;
-  max-width: 75%;
-  max-height: 90vh;
-  overflow: hidden auto;
-
-  &::-webkit-scrollbar {
-    width: ($line * 2);
-  }
-
-  &::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px transparentize($dim, 0.9);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $primary;
-    outline: 1px dashed $black;
-  }
 
   .event {
     .header {
@@ -53,7 +29,6 @@ $spacing: 50px;
       list-style: none;
       display: flex;
       justify-content: center;
-      align-content: space-betweem;
       li {
         display: flex;
         padding: 5px 0;
