--- a/src/Main.scss
+++ b/src/Main.scss
@@ -54,6 +54,7 @@ body {
     & > * {
       max-height: 70vh;
       overflow: hidden auto;
+      margin-bottom: -5px;
 
       &::-webkit-scrollbar {
         width: ($line * 2);
@@ -138,5 +139,11 @@ body {
   footer {
     grid-area: footer;
     justify-content: center;
+
+    display: flex;
+    flex-flow: row;
+    & > * {
+      padding: 0 0.25rem;
+    }
   }
 }
