--- a/src/Main.scss
+++ b/src/Main.scss
@@ -30,7 +30,7 @@ body {
     left: 0;
     width: 100%;
     height: 10px;
-    box-shadow: 0px 0px 15px 15px transparentize($black, 0.5);
+    box-shadow: 0px 0px 15px 15px transparentize($primary, 0.5);
     z-index: 100;
   }
 
@@ -71,7 +71,7 @@ body {
           lighten($primary, 50%) 95%,
           $light 100%
         );
-        outline: 1px dashed $dim;
+        outline: 1px dashed $primary;
       }
     }
   }
