Fix icon alignment issues and bump version to 1.0.1
- Remove fa-border and fa-pull-left classes from section header icons
- Add fixed dimensions (40x40px) and flexbox centering for social media icons
- Set consistent width (60px) with object-fit: contain for language logos
- Improve overall visual consistency and alignment throughout the page

--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -5,7 +5,7 @@
 <article class="timeline">
   <section class="event">
     <h3 class="header">
-      <i class="fa-solid fa-cat fa-2x fa-fw fa-border fa-pull-left"></i>
+      <i class="fa-solid fa-cat fa-2x fa-fw"></i>
       Functional world
     </h3>
     <p>
@@ -53,7 +53,7 @@
 
   <section class="event">
     <h3 class="header">
-      <i class="fa-brands fa-python fa-2x fa-fw fa-border fa-pull-left"></i>
+      <i class="fa-brands fa-python fa-2x fa-fw"></i>
       Logging & Monitoring
     </h3>
     <p>
@@ -82,7 +82,7 @@
 
   <section class="event">
     <h3 class="header">
-      <i class="fa-brands fa-java fa-2x fa-fw fa-border fa-pull-left"></i>
+      <i class="fa-brands fa-java fa-2x fa-fw"></i>
       Cooking the beans
     </h3>
     <p>
@@ -102,7 +102,7 @@
 
   <section class="event">
     <h3 class="header">
-      <i class="fa-solid fa-heart fa-2x fa-fw fa-border fa-pull-left"></i>
+      <i class="fa-solid fa-heart fa-2x fa-fw"></i>
       Beginning
     </h3>
     <p>
@@ -152,7 +152,8 @@
 
   .event ul li img {
     height: 60px;
-    width: auto;
+    width: 60px;
+    object-fit: contain;
     transition: transform 0.2s;
   }
 
